--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "chenyixiang <chenyixiang_cyx@youzan.com>",
   "license": "MIT",
   "dependencies": {
-    "@type-challenges/utils": "^0.1.1"
+    "@type-challenges/utils": "^0.1.1",
+    "typescript": "^4.5.5"
   }
 }
